--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@ header{
 
 h1 {
   margin: 0;
-  font-size: 2.5em;
+  /* font-size: 2.5em; */
+  font-size: 3vw;
   background-color: black;
   color: white;
   padding: 40px 10px;
@@ -55,6 +56,7 @@ nav a {
   text-decoration: none;
   font-weight: bolder;
   padding: 4px 20px;
+  font-size: 1.2vw;
 }
 
 nav a:hover {
@@ -68,6 +70,17 @@ nav a:hover {
   background-color: #C0130E;
   color: white;
   padding: 4px 20px;
+}
+
+/* All content to the left - inputs */
+#left-content h2 {
+  /* font-size: 1.8em; */
+  font-size: 2vw;
+  margin-top: 110px;
+}
+
+#left-content p {
+  font-size: 1.4vw;
 }
 
 /* All three images on index.html */
@@ -89,11 +102,12 @@ nav a:hover {
   position: relative;
   left: 50%;
   transform: translate(-50%);
-
+  margin-bottom: 25px;
 }
 
 #imgsize2 {
   background-image: url(image/children.jpg);
+  margin-bottom: 25px;
 }
 
 #imgsize3 {
@@ -106,6 +120,7 @@ nav a:hover {
 
 #flex{
   display: flex;
+  margin-top: 66px;
 }
 
 #right-content {
@@ -115,4 +130,6 @@ nav a:hover {
 
 #left-content {
   width: 60%;
+  margin-right: 25px;
+  margin-left: 25px;
 }
