--- a/style.css
+++ b/style.css
@@ -73,10 +73,19 @@ nav a:hover {
 }
 
 /* All content to the left - inputs */
+#left-content {
+  position: relative;
+  top: 38px;
+  width: 60%;
+  margin-right: 25px;
+  margin-left: 25px;
+}
+
 #left-content h2 {
   /* font-size: 1.8em; */
   font-size: 2vw;
   margin-top: 110px;
+  
 }
 
 #left-content p {
@@ -94,18 +103,23 @@ nav a:hover {
 
 }
 
+.outer-container > .inner-container {
+  margin-right: 10%;
+  margin-top: 2%;
+}
+
 input[type='text'] {
   outline:none;
 }
 
 
 #reportText {
-  border-bottom: 1px solid black;
-  font-size: 16px;
+  border: 1px solid black;
+  font-size: 0.92vw;
   color: black;
   height: 32px;
+  
 }
-
 
 select {
   outline: none;
@@ -173,7 +187,7 @@ select {
   top: 0;
   left: 0;
   z-index: 1;
-  font-size: 16px;
+  font-size: 0.92vw;
   border: none;
   background: transparent;
   -webkit-appearance: none;
@@ -192,7 +206,7 @@ select {
 }
 
 #getReports {
-  padding: 8% 22%;
+  padding: 10% 22%;
   text-align: center;
   font-family: 'Open Sans', sans-serif;
   font-weight: bold;
@@ -201,10 +215,11 @@ select {
   cursor: pointer;
   border: none;
   text-align: center;
+  font-size: 0.8vw;
 }
 
 #getReports:hover {
-  background-color: #DBE7F4;
+  background-color: #CAD0DE;
   color: #28BFE6;
 }
 
@@ -254,10 +269,4 @@ select {
 #right-content {
   width: 40%;
   
-}
-
-#left-content {
-  width: 60%;
-  margin-right: 25px;
-  margin-left: 25px;
 }
