--- a/responsive_style.css
+++ b/responsive_style.css
@@ -141,24 +141,30 @@
 
   #title_section {
     font-size: 4.2vw;
-}
+  }
 
   #prevTitle2, #nextTitle {
-    font-size: 1rem;
     margin: 0;
     position: absolute;
     top: 50%;
-    width: 35px;
-    height: 35px;
-    padding: 6px 0;
   }
 
   #prevTitle2 {
     left: -8%;
+    width: 0; 
+    height: 0; 
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent; 
+    border-right:30px solid #28BFE6; 
   }
 
   #nextTitle {
     left: 108%;
+    width: 0;
+    height: 0;
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+    border-left: 30px solid #28BFE6;
   }
 
   #info{
@@ -195,9 +201,7 @@
     .show {
       display: block;
     }
-  
-
-}
+  }
 
 
 
@@ -358,15 +362,22 @@
   
     #title_section {
       font-size: 2.2vw;
-  }
+    }
   
     #prevTitle2, #nextTitle {
-      top: 16%;
-      margin-bottom: 10%;
-      text-align: center;
-      left: 40%;
-      padding: 1% 2%;
-      font-size: 2vw;
+      display: inline-block;
+      position: absolute;
+      top: 50%;
+      left: 42%;
+      transform: translate(-50%, -50%);
+    }
+  
+    #prevTitle2 {
+      left: -5%;
+    }
+  
+    #nextTitle {
+      left: 103%;
     }
   
     #info{
@@ -451,6 +462,14 @@
   font-size: 1.3vw;
 }
 
+/* Styling for report page */
+#prevTitle2, #nextTitle {
+  position: relative;
+  top: 108px;
+  left: 50%;
+  font-size: 1vw;
+}
+
 }
 
 /* Large devices (laptops/desktops, 882px and up) */
@@ -517,14 +536,7 @@
         font-size:  1.5vw;
     }
     
-      #prevTitle2, #nextTitle {
-        top: 32px;
-        margin-bottom: 10%;
-        text-align: center;
-        left: 40%;
-        padding: 1% 2%;
-        font-size: 1.3vw;
-      }
+
     
       #info{
         margin: 0 8%;
@@ -580,10 +592,6 @@
         font-size:  1.3vw;
     }
     
-      #prevTitle2, #nextTitle {
-        top: 52px;
-        font-size: 1vw;
-      }
     
       #info{
         margin: 0 8%;
