--- a/style.css
+++ b/style.css
@@ -24,11 +24,16 @@ h1 {
   margin: 0;
   /* font-size: 2.5em; */
   font-size: 3vw;
-  background-color: black;
-  color: white;
+  background-color: #254f86;
+  color: #9aadd0;
   padding: 40px 10px;
   width: 32%;
   text-align: center;
+}
+
+h1::first-letter {
+  color: #f09f54;
+  font-size: 4vw;
 }
 
 nav {
