working countries api, countries page dont open from reportinfo page-websocket error

--- a/responsive_style.css
+++ b/responsive_style.css
@@ -24,6 +24,7 @@
     border: red 2px solid;
     border-radius: 2px;
     padding: 2px 4px;
+    cursor: pointer;
   }
 
   /* for hamburger to pop up when clicked */
@@ -171,6 +172,7 @@
 
   #title_section {
     font-size: 4.2vw;
+    padding-bottom: 2%;
   }
 
   #prevTitle2, #nextTitle {
@@ -274,6 +276,8 @@
     border: red 2px solid;
     border-radius: 2px;
     padding: 2px 4px;
+    background-color: white;
+    cursor: pointer;
   }
 
   /* for hamburger to pop up when clicked */
@@ -532,12 +536,25 @@
   font-size: 1.3vw;
 }
 
+#title_section{
+  padding-bottom: 2%;
+}
+
 /* Styling for report page */
 #prevTitle2, #nextTitle {
-  position: relative;
-  top: 108px;
-  left: 50%;
+  position: absolute;
+  top: 108%;
+  left: 48%;
   font-size: 1vw;
+  margin-bottom: 2%;
+}
+
+#prevTitle2 {
+  left: 48%;
+}
+
+#nextTitle {
+  left: 52%;
 }
 
 }
