--- a/responsive_style.css
+++ b/responsive_style.css
@@ -98,6 +98,8 @@
   #left-content {
     width: 100%;
     margin: 0;
+    margin-bottom: 8%;
+
   }
 
   #left-content h2 {
@@ -351,6 +353,7 @@
   #left-content {
     width: 100%;
     margin: 0;
+    margin-bottom: 8%;
   }
 
   #left-content h2 {
